8472
2.10.0-RC1 behavior:

{code}
class X(val s: String) extends AnyVal {
  private[this] class I2(val q: String)

  def y(i: Int) = {
    val i2 = new I2(i.toString)
    i2.q + s
  }
}
<console>:8: error: implementation restriction: nested class is not allowed in value class
This restriction is planned to be removed in subsequent releases.
         private[this] class I2(val q: String)
                             ^
{code}
